--- a/jsweaver/.classpath
+++ b/jsweaver/.classpath
@@ -12,7 +12,12 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=jsweaver&amp;ivyXmlPath=ivy.xml&amp;confs=*"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/LanguageSpecification"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/WeaverInterface"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/SpecsUtils"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/jsAst"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/LaraDoc"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/jOptions"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/LARAI"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
