Removes replaces lara-framework Ivy dependency with local projects

--- a/jsAst/.classpath
+++ b/jsAst/.classpath
@@ -7,5 +7,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=jsAst&amp;ivyXmlPath=ivy.xml&amp;confs=*"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JsEngine"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/SpecsUtils"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
