--- a/jsweaver/ivy.xml
+++ b/jsweaver/ivy.xml
@@ -31,6 +31,6 @@
 		<!--<dependency org="com.sun.xml.bind" name="jaxb-impl" rev="2.2.11"/>  -->
 
 		<!-- <dependency org="pt.up.fe.specs" name="lara-framework" rev="201906101921"/> -->
-		<dependency org="pt.up.fe.specs" name="lara-framework" rev="201909101509"/>
+		<!--<dependency org="pt.up.fe.specs" name="lara-framework" rev="201909101509"/>-->
 	</dependencies>
 </ivy-module>
