--- a/jsweaver/.classpath
+++ b/jsweaver/.classpath
@@ -12,6 +12,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=jsweaver&amp;ivyXmlPath=ivy.xml&amp;confs=*"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/LaraCommonLanguageApi"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/LanguageSpecification"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/WeaverInterface"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/SpecsUtils"/>
@@ -19,5 +20,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/LaraDoc"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/jOptions"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/LARAI"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/LaraFramework"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
