--- a/.github/workflows/ant-lara-js.yml
+++ b/.github/workflows/ant-lara-js.yml
@@ -5,9 +5,9 @@ name: Java CI - Lara-JS
 
 on:
   push:
-    branches: [ staging ]
+    branches: [ ts-conversion ]
   pull_request:
-    branches: [ staging ]
+    branches: [ ts-conversion ]
 
   # Daily at midnight
   schedule:
@@ -29,7 +29,7 @@ jobs:
     - uses: actions/checkout@v4
       # Because of scheduled runs, by default run on default branch
       with:
-        ref: staging
+        ref: ts-conversion
 
     - name: Cache ivy dependencies
       id: cache-nivy
