--- a/.github/workflows/ant-main.yml
+++ b/.github/workflows/ant-main.yml
@@ -34,26 +34,28 @@ jobs:
           path: ~/.ivy2
           key: ${{ runner.os }}-build-${{ env.cache-name }}      
  
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
+        
     - name: Generate build.xml
       run: | 
-        wget -N http://specs.fe.up.pt/tools/eclipse-build.jar
+        wget -q -N http://specs.fe.up.pt/tools/eclipse-build.jar
         java -jar eclipse-build.jar https://github.com/specs-feup/specs-java-libs https://github.com/specs-feup/lara-framework ./
         wget -N -O /usr/share/ant/lib/ivy-2.5.0.jar specs.fe.up.pt/libs/ivy-2.5.0.jar
     - name: Build with Ant
       run: |
         ant -noinput -buildfile build.xml
-    #- name: Copy test results        
-    #  run: |
-        # Tried relative paths (not supported by junit action) and symlinks (are not followed by glob)
-        # Resorted to copying the tests to a folder in the repo folder
-    #    cp -a reports-eclipse-build/. jsweaver/junit-reports/        
+    
+    - name: List directory
+      run: |
+        echo "Current folder"
+        ls
+    
     - name: Publish Test Report 
-      uses: mikepenz/action-junit-report@v3.0.1
+      uses: mikepenz/action-junit-report@v3.6.1
       if: always() # always run even if the previous step fails
       with:
         report_paths: '**/reports-eclipse-build/TEST-*.xml'
