--- a/.github/workflows/ant-lara-2.0-legacy.yml
+++ b/.github/workflows/ant-lara-2.0-legacy.yml
@@ -1,13 +1,17 @@
 # This workflow will build a Java project with Ant
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-ant
 
-name: Java CI - Main
+name: Java CI - Lara 2.0 Legacy
 
 on:
   push:
-    branches: [ master ]
+    branches: [ lara-2.0-legacy ]
   pull_request:
-    branches: [ master ]
+    branches: [ lara-2.0-legacy ]
+
+  # Daily at midnight
+  schedule:
+    - cron: '0 0 * * *'
 
 permissions:
   checks: write
@@ -19,7 +23,10 @@ jobs:
 
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+      # Because of scheduled runs, by default run on default branch
+      with:
+        ref: lara-2.0-legacy
 
     - name: Cache ivy dependencies
       id: cache-nivy
@@ -31,15 +38,15 @@ jobs:
           path: ~/.ivy2
           key: ${{ runner.os }}-build-${{ env.cache-name }}      
  
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
     - name: Generate build.xml
       run: | 
         wget -N http://specs.fe.up.pt/tools/eclipse-build.jar
-        java -jar eclipse-build.jar https://github.com/specs-feup/specs-java-libs https://github.com/specs-feup/lara-framework ./
+        java -jar eclipse-build.jar https://github.com/specs-feup/specs-java-libs https://github.com/specs-feup/lara-framework?commit=lara-2.0-legacy ./
         wget -N -O /usr/share/ant/lib/ivy-2.5.0.jar specs.fe.up.pt/libs/ivy-2.5.0.jar
     - name: Build with Ant
       run: |
